--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                             <h6>Contact Info</h6>
                             <div class="contact">
                                 <a class="text-white" href="#">
-                                    <i class="fa-brands fa-telegram text-center"></i>
+                                    <i class="fa-solid fa-location-arrow text-center"></i>
                                 </a>
                                 <p class="d-inline-block w-75 ms-5 pb-2">Dogair Bazar, Signboard, demra, Dhaka - 1206</p>
                             </div>
@@ -398,7 +398,7 @@
                                 <p class="d-inline-block pe-4 w-75 ms-5 pb-2">+880 1728 619733 +880 1728 000000</p>
                             </div>
                             <a class="text-white" href="#">
-                                <i class="fa-brands fa-telegram text-center"></i>
+                                <i class="fa-solid fa-location-arrow text-center"></i>
                             </a>
                             <p class="d-inline-block">nasrullah.cit.bd@gmail.com</p>
                         </div>
