--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </ul>
                     <i class="fa-solid fa-cart-arrow-down position-relative fs-2 pe-2"> <span class="list-number position-absolute top-0 start-100 translate-middle bg-danger text-white rounded-circle p-1">10</span></i>
                     <a href="#">
-                        <ul class="mt-3 align-border">
+                        <ul class="mt-3 align-border align-2">
                             <li class="ms-auto mb-2 border1"></li>
                             <li class="ms-auto mb-2 border2"></li>
                             <li class="ms-auto border3"></li>
